<resources>
    <string name="app_name">MineSeeker</string>
    <string name="skip">SKIP</string>
    <string name="play_game">Play Game!</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="board_size">Board Size</string>
    <string name="mines"># Mines</string>
    <string name="ok">OK</string>
    <string name="congratulations_you_win">Congratulations! You Win!</string>
    <string name="game_over">GAME OVER</string>
    <string name="textview">TextView</string>
    <string name="sampletext">SampleText</string>
    <string-array name="board_sizes">
        <item>4 x 6</item>
        <item>5 x 10</item>
        <item>6 x 15</item>
    </string-array>
    <string-array name="mine_amount">
        <item>6</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
</resources>
